Sun Aug  2 11:28:40 UTC 2009 Chad Beaulac <chad@objectivesolutions.com>
        * Bug 3334  - Revisions 86318 86319 86320 86321 86322 86323 
        * tests/Bug_3334_Regression_Test.cpp
          Renamed from Service_Config_Stream_SEGV.cpp
        * Tests/Bug_3334_Regression_Test.cpp
          Renamed from Service_Config_Stream_SEGV.conf
        * tests/run_test.list
          Added Bug_3334_Regression_Test
          Put changes back in from Carlos's commit below
        * tests/tests.mpc
          Added Bug_3334_Regression_Test
          Put changes back in from Carlos's commit below
Sat Aug  1 12:19:58 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * This completes the fixes for Buzilla #3715:

        * tests/run_test.lst:
        * tests/Makefile.am:
        * tests/tests.mpc:
        * tests/Compiler_Features_14_Test.cpp:
          This test verifies that partial template specialization works.

        * tests/Compiler_Features_11_Test.cpp:
          Test for standard string streams

        * tests/Compiler_Features_12_Test.cpp:
          Test for template template parameters

        * tests/Compiler_Features_13_Test.cpp:
          Test for cast operators

        * tests/tests.mpc:
        * tests/run_test.lst:
        * tests/Makefile.am:
          The usual accruements that go with the tests.

        * tests/run_test.lst:
        * tests/Makefile.am:
        * tests/tests.mpc:
        * tests/Compiler_Features_10_Test.cpp:
          Add new test for exceptions.  Verify that <stdexcept> is there,
          that we can raise exceptions, and that object destruction during
          exceptions is sound.

        * tests/Compiler_Features_07_Test.cpp:
          Test for std::string

        * tests/Compiler_Features_08_Test.cpp:
          Test for std::wstring

        * tests/Compiler_Features_09_Test.cpp:
          Test for std::auto_ptr<>

        * tests/Compiler_Features_06_Test.cpp:
          Fixed typo in test name.

        * tests/run_test.lst: